examples/test/testpolicy14071.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14071
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key23: value39
      key30: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value1
      podSelector:
        matchLabels:
          key17: value35
          key28: value33
